--- a/owners.html
+++ b/owners.html
@@ -47,7 +47,7 @@
                     <div class="text-side">
                         <h3>Strategic Planning and Adaptation</h3>
                         <p>Although everyday is different, strategic planning and adaptation are crucial. Explore ways to align your business strategy with market trends, innovate service offerings, and build on data to help predict future needs. Connect with industry experts for insights.</p>
-                        <a href="https://www.youtube.com/watch?v=qkU3uwWyAn8" target="_blank" alt="hotel strategy video"><img src="Images/link.png" alt="Link Icon" id="link-icon">Strategic Resources</a>
+                        <a href="https://www.youtube.com/watch?v=qkU3uwWyAn8" target="_blank" alt="hotel strategy video"><img src="Images/link.png" alt="Link Icon" class="link-icon">Strategic Resources</a>
                     </div>
                 </article>
                 <article class="article-right">
@@ -60,8 +60,8 @@
                     <div class="text-side">
                         <h3>Embracing New Marketing Trends</h3>
                         <p>Understanding and implementing the latest marketing trends can help attract new customers. Dive into digital marketing techniques, social media engagement strategies, and customer relationship management to enhance your brand's visibility and customer loyalty.</p>
-                        <a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank"><img src="Images/link.png" alt="Link Icon" id="link-icon">New Tech to Make Things Easier</a>
-                        <a href="https://coso.ai/" target="_blank"><img src="Images/link.png" alt="Link Icon" id="link-icon">Marketing AI Software</a>
+                        <a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank"><img src="Images/link.png" alt="Link Icon" class="link-icon">New Tech to Make Things Easier</a>
+                        <a href="https://coso.ai/" target="_blank"><img src="Images/link.png" alt="Link Icon" class="link-icon">Marketing AI Software</a>
 
                     </div>
                 </article>
@@ -75,7 +75,7 @@
                     <div class="text-side">
                         <h3>Effective Staff Management</h3>
                         <p>Look after your staff, they'll look after your customers! Learn about effective staff training programs, motivational strategies, and how to create a more positive work environment that ensures high productivity and job satisfaction.</p>
-                        <a href="www.theworkwall.com" target="_blank" alt="link to WorkWall app"><img src="Images/link.png" alt="Link Icon" id="link-icon">Staff Management Software</a>
+                        <a href="www.theworkwall.com" target="_blank" alt="link to WorkWall app"><img src="Images/link.png" alt="Link Icon" class="link-icon">Staff Management Software</a>
                     </div>
                 </article>
             </div>
