--- a/managers.html
+++ b/managers.html
@@ -51,7 +51,7 @@
                     <div class="text-side">
                         <h3>Building and Leading Effective Teams</h3>
                         <p>Learn the art of team building and leadership in the hospitality industry. Explore methods to motivate your team, foster a collaborative & engaging environment, and manage your staff effectively for optimal performance.</p>
-                        <a href="https://www.youtube.com/watch?v=bwcyXcOpWVs" target="_blank" alt="ted talk on team building"><img src="Images/link.png" alt="Link Icon" id="link-icon">TedTalk: Team Building Tips</a>
+                        <a href="https://www.youtube.com/watch?v=bwcyXcOpWVs" target="_blank" alt="ted talk on team building"><img src="Images/link.png" alt="Link Icon" class="link-icon">TedTalk: Team Building Tips</a>
                     </div>
                 </article>
                 <article class="article-right">
@@ -62,7 +62,7 @@
                     <div class="text-side">
                         <h3>Enhancing Customer Service</h3>
                         <p>Happy customers are key to success. Gain insights into delivering outstanding customer experiences, handling customer feedback constructively, and implementing service improvements that make a difference.</p>
-                         <a href="https://www.youtube.com/watch?v=s5ROSlL94tg" target="_blank" alt="video on customer service"><img src="Images/link.png" alt="Link Icon" id="link-icon">Video: Customer Service Tips</a>
+                         <a href="https://www.youtube.com/watch?v=s5ROSlL94tg" target="_blank" alt="video on customer service"><img src="Images/link.png" alt="Link Icon" class="link-icon">Video: Customer Service Tips</a>
                     </div>
                 </article>
                 <article class="article-left">
@@ -73,7 +73,7 @@
                     <div class="text-side">
                         <h3>Optimizing Operational Efficiency</h3>
                         <p>Maximize the efficiency of your operations with these improvements. From streamlining processes to utilizing technology effectively, discover ways to increase productivity while maintaining high-quality standards.</p>
-                       <a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank" alt="video: how tech can help"><img src="Images/link.png" alt="Link Icon" id="link-icon">How Tech Can Help</a>
+                       <a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank" alt="video: how tech can help"><img src="Images/link.png" alt="Link Icon" class="link-icon">How Tech Can Help</a>
                     </div>
                 </article>
             </div>
