fix html issues in validator

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 						<div class="text-side">
 							<h3>Overcoming Industry Challenges</h3>
 							<p>We can help you cope in these tough times. Explore strategies for resilience and success.</p>
-							<a href="owners.html"><img src="assets/images/link.png" alt="Link Icon" class="link-icon" /> Advice for Owners</a>
-							<a href="managers.html"><img src="assets/images/link.png" alt="Link Icon" class="link-icon" /> Guidance for Managers</a>
+							<a href="owners.html"><img src="assets/images/link.png" alt="link icon" class="link-icon" /> Advice for Owners</a>
+							<a href="managers.html"><img src="assets/images/link.png" alt="link icon" class="link-icon" /> Guidance for Managers</a>
 						</div>
 					</article>
 					<article class="article-right">
@@ -62,7 +62,7 @@
 						<div class="text-side">
 							<h3>Getting Through The Strain</h3>
 							<p>Empower yourself with resources for personal and professional development.</p>
-							<a href="staff.html"><img src="assets/images/link.png" alt="Link Icon" class="link-icon" />Support for Staff</a>
+							<a href="staff.html"><img src="assets/images/link.png" alt="link icon" class="link-icon" />Support for Staff</a>
 						</div>
 					</article>
 					<article class="article-left">
@@ -75,8 +75,8 @@
 						<div class="text-side">
 							<h3>Community Support</h3>
 							<p>Engage with your peers and help build a supportive network.</p>
-							<label for="communityPopupCheckbox" class="popup-button"
-								><img src="assets/images/link.png" alt="Link Icon" class="link-icon" />Join Our Community</label
+							<label for="communityPopupCheckbox" class="popup-button">
+								<img src="assets/images/link.png" alt="Link Icon" class="link-icon" />Join Our Community</label
 							>
 						</div>
 					</article>
