--- a/managers.html
+++ b/managers.html
@@ -4,109 +4,97 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hospitality Help for Managers</title>
-		<link rel="stylesheet" href="assets/css/style.css" <!DOCTYPE html />
-		/>
-		<html lang="en">
-			<head>
-				<meta charset="UTF-8" />
-				<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-				<title>Hospitality Help for Managers</title>
-				<link rel="stylesheet" href="assets/css/style.css" />
-			</head>
-			<body>
-				<!-- Standard nav bar for all pages -->
-				<header>
-					<div class="navbar">
-						<h1>Hospitality Help Hub</h1>
-						<input type="checkbox" id="nav-toggle" class="nav-toggle" />
-						<label for="nav-toggle" class="nav-toggle-label">
-							<span></span>
-						</label>
-						<nav>
-							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li><a href="owners.html">Owners</a></li>
-								<li><a href="managers.html">Managers</a></li>
-								<li><a href="staff.html">Staff</a></li>
-							</ul>
-						</nav>
-					</div>
-				</header>
-
-				<main>
-					<!-- Opening image and text for all pages -->
-					<section class="hero" style="background-image: url('assets/images/helpdesk.webp')">
-						<div class="container">
-							<h2>Welcome, Hospitality Managers</h2>
-							<p>Discover key strategies and insights to enhance your management skills and improve your venue's performance.</p>
-						</div>
-					</section>
-					<section class="content">
-						<div class="container">
-							<!-- Pages are divided into 2 or 3 "articles" with text (text-side) images with text on an overlay -->
-							<article class="article-left">
-								<div class="image-side">
-									<img src="assets/images/Reality-HR-team-building-1024x624.webp" alt="Team Building pic" />
-									<div class="overlay">A stronger team can make your life a lot easier.</div>
-								</div>
-								<div class="text-side">
-									<h3>Building and Leading Effective Teams</h3>
-									<p>
-										Learn the art of team building and leadership in the hospitality industry. Explore methods to motivate your team, foster a
-										collaborative & engaging environment, and manage your staff effectively for optimal performance.
-									</p>
-									<a href="https://www.youtube.com/watch?v=bwcyXcOpWVs" target="_blank" alt="ted talk on team building"
-										><img src="assets/images/link.png" alt="Link Icon" class="link-icon" />TedTalk: Team Building Tips</a
-									>
-								</div>
-							</article>
-							<article class="article-right">
-								<div class="image-side">
-									<img
-										src="assets/images/unhappy-guest-client-or-tourist-is-leaving-hotel-vector-cartoon-stick-figure-illustration-2HJC1M2.jpeg"
-										alt="Customer Service Excellence"
-									/>
-									<div class="overlay">Just a 5% increase in customer retention can almost double profits.</div>
-								</div>
-								<div class="text-side">
-									<h3>Enhancing Customer Service</h3>
-									<p>
-										Happy customers are key to success. Gain insights into delivering outstanding customer experiences, handling customer feedback
-										constructively, and implementing service improvements that make a difference.
-									</p>
-									<a href="https://www.youtube.com/watch?v=s5ROSlL94tg" target="_blank" alt="video on customer service"
-										><img src="assets/images/link.png" alt="Link Icon" class="link-icon" />Video: Customer Service Tips</a
-									>
-								</div>
-							</article>
-							<article class="article-left">
-								<div class="image-side">
-									<img src="assets/images/oprtn_efficncy.jpeg" alt="Operational Efficiency" />
-									<div class="overlay">More efficiency means more profits.</div>
-								</div>
-								<div class="text-side">
-									<h3>Optimizing Operational Efficiency</h3>
-									<p>
-										Maximize the efficiency of your operations with these improvements. From streamlining processes to utilizing technology
-										effectively, discover ways to increase productivity while maintaining high-quality standards.
-									</p>
-									<a
-										href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry"
-										target="_blank"
-										alt="video: how tech can help"
-										><img src="assets/images/link.png" alt="Link Icon" class="link-icon" />How Tech Can Help</a
-									>
-								</div>
-							</article>
-						</div>
-					</section>
-				</main>
-				<footer>
-					<div class="container">
-						<p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
-					</div>
-				</footer>
-			</body>
-		</html>
+		<link rel="stylesheet" href="assets/css/style.css" />
 	</head>
+	<body>
+		<!-- Standard nav bar for all pages -->
+		<header>
+			<div class="navbar">
+				<h1>Hospitality Help Hub</h1>
+				<input type="checkbox" id="nav-toggle" class="nav-toggle" />
+				<label for="nav-toggle" class="nav-toggle-label">
+					<span></span>
+				</label>
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="owners.html">Owners</a></li>
+						<li><a href="managers.html">Managers</a></li>
+						<li><a href="staff.html">Staff</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+
+		<main>
+			<!-- Opening image and text for all pages -->
+			<section class="hero" style="background-image: url('assets/images/helpdesk.webp')">
+				<div class="container">
+					<h2>Welcome, Hospitality Managers</h2>
+					<p>Discover key strategies and insights to enhance your management skills and improve your venue's performance.</p>
+				</div>
+			</section>
+			<section class="content">
+				<div class="container">
+					<!-- Pages are divided into 2 or 3 "articles" with text (text-side) images with text on an overlay -->
+					<article class="article-left">
+						<div class="image-side">
+							<img src="assets/images/Reality-HR-team-building-1024x624.webp" alt="Team Building pic" />
+							<div class="overlay">A stronger team can make your life a lot easier.</div>
+						</div>
+						<div class="text-side">
+							<h3>Building and Leading Effective Teams</h3>
+							<p>
+								Learn the art of team building and leadership in the hospitality industry. Explore methods to motivate your team, foster a
+								collaborative & engaging environment, and manage your staff effectively for optimal performance.
+							</p>
+							<a href="https://www.youtube.com/watch?v=bwcyXcOpWVs" target="_blank">
+								<img src="assets/images/link.png" alt="Link Icon" class="link-icon" />TedTalk: Team Building Tips
+							</a>
+						</div>
+					</article>
+					<article class="article-right">
+						<div class="image-side">
+							<img
+								src="assets/images/unhappy-guest-client-or-tourist-is-leaving-hotel-vector-cartoon-stick-figure-illustration-2HJC1M2.jpeg"
+								alt="Customer Service Excellence"
+							/>
+							<div class="overlay">Just a 5% increase in customer retention can almost double profits.</div>
+						</div>
+						<div class="text-side">
+							<h3>Enhancing Customer Service</h3>
+							<p>
+								Happy customers are key to success. Gain insights into delivering outstanding customer experiences, handling customer feedback
+								constructively, and implementing service improvements that make a difference.
+							</p>
+							<a href="https://www.youtube.com/watch?v=s5ROSlL94tg" target="_blank">
+								<img src="assets/images/link.png" alt="Link Icon" class="link-icon" />Video: Customer Service Tips
+							</a>
+						</div>
+					</article>
+					<article class="article-left">
+						<div class="image-side">
+							<img src="assets/images/oprtn_efficncy.jpeg" alt="Operational Efficiency" />
+							<div class="overlay">More efficiency means more profits.</div>
+						</div>
+						<div class="text-side">
+							<h3>Optimizing Operational Efficiency</h3>
+							<p>
+								Maximize the efficiency of your operations with these improvements. From streamlining processes to utilizing technology effectively,
+								discover ways to increase productivity while maintaining high-quality standards.
+							</p>
+							<a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank">
+								<img src="assets/images/link.png" alt="Link Icon" class="link-icon" />How Tech Can Help
+							</a>
+						</div>
+					</article>
+				</div>
+			</section>
+		</main>
+		<footer>
+			<div class="container">
+				<p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
+			</div>
+		</footer>
+	</body>
 </html>
