--- a/staff.html
+++ b/staff.html
@@ -115,14 +115,13 @@
 							<p>
 								Dedicated to challenging mental health stigma in hospitality, The Burnt Chef Project offers resources and support. From self-care
 								posters to podcasts discussing well-being, find tools to nurture your mental health.
-								<a class="text-anchor" href="https://www.theburntchefproject.com" target="_blank">Visit The Burnt Chef Project</a>.
+								<a href="https://www.theburntchefproject.com" target="_blank">Visit The Burnt Chef Project</a>.
 							</p>
 						</div>
 					</article>
-
 					<article class="article-right">
 						<div class="image-side">
-							<img id="workwall-logo" src="assets/images/workwall.jpg" alt="WorkWall logo" />
+							<img src="assets/images/workwall.jpg" alt="WorkWall logo" />
 							<div class="overlay">
 								<p>"Your voice matters in the workplace."</p>
 							</div>
@@ -133,7 +132,7 @@
 								Struggling with management? It's crucial to address workplace issues for your well-being. Learn the importance of staff happiness and
 								the hidden costs of staff turnover at
 								<a
-									class="text-anchor"
+									id="workwall-link"
 									href="https://www.theworkwall.com/the-hidden-costs-of-staff-turnover-and-top-3-ways-to-prevent-it"
 									target="_blank"
 									>WorkWall</a
@@ -145,7 +144,6 @@
 				</div>
 			</section>
 		</main>
-
 		<footer>
 			<div class="container">
 				<p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
