remove extra permission

--- a/owners.html
+++ b/owners.html
@@ -1,107 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hospitality Help for Owners</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-    <!-- Standard nav bar for all pages -->
-    <header>
-        <div class="navbar">
-            <h1>Hospitality Help Hub</h1>
-            <input type="checkbox" id="nav-toggle" class="nav-toggle">
-            <label for="nav-toggle" class="nav-toggle-label">
-                <span></span>
-            </label>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="owners.html">Owners</a></li>
-                    <li><a href="managers.html">Managers</a></li>
-                    <li><a href="staff.html">Staff</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <main>
-        <!-- Opening image and text for all pages -->
-        <section class="hero" style="background-image: url('assets/images/helpdesk.webp')">
-            <div class="container">
-                <h2>Welcome, Business Owners</h2>
-                <p>Here you can find resources and advice tailored to help you succeed & manage in the hospitality industry.</p>
-            </div>
-        </section>
-        <section class="content">
-            <div class="container">
-                <!-- Pages are divided into 2 or 3 "articles" with text (text-side) images with text on an overlay -->
-                <article class="article-left">
-                    <div class="image-side">
-                        <img src="assets/images/Strategy-Chess.png" alt="Business Strategy">
-                        <div class="overlay">
-                            <p>"Plan strategically for success."</p>
-                        </div>
-                    </div>
-                    <div class="text-side">
-                        <h3>Strategic Planning and Adaptation</h3>
-                        <p>
-                            Although everyday is different, strategic planning and adaptation are crucial. Explore ways to align your business strategy with
-                            market trends, innovate service offerings, and build on data to help predict future needs. Connect with industry experts for insights.
-                        </p>
-                        <a href="https://www.youtube.com/watch?v=qkU3uwWyAn8" target="_blank">
-                            <img src="assets/images/link.png" alt="Link Icon" class="link-icon">Strategic Resources
-                        </a>
-                    </div>
-                </article>
-                <article class="article-right">
-                    <div class="image-side">
-                        <img src="assets/images/Restaurant-Management-Skills.png" alt="Marketing Trends">
-                        <div class="overlay">
-                            <p>"Grow your customer base through improved marketing."</p>
-                        </div>
-                    </div>
-                    <div class="text-side">
-                        <h3>Embracing New Marketing Trends</h3>
-                        <p>
-                            Understanding and implementing the latest marketing trends can help attract new customers. Dive into digital marketing techniques,
-                            social media engagement strategies, and customer relationship management to enhance your brand's visibility and customer loyalty.
-                        </p>
-                        <a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank">
-                            <img src="assets/images/link.png" alt="Link Icon" class="link-icon">New Tech to Make Things Easier
-                        </a>
-                        <a href="https://coso.ai/" target="_blank">
-                            <img src="assets/images/link.png" alt="Link Icon" class="link-icon">Marketing AI Software
-                        </a>
-                    </div>
-                </article>
-                <article class="article-left">
-                    <div class="image-side">
-                        <img src="assets/images/staff-training.jpg" alt="Staff Management">
-                        <div class="overlay">
-                            <p>"Develop a more skilled and motivated team."</p>
-                        </div>
-                    </div>
-                    <div class="text-side">
-                        <h3>Effective Staff Management</h3>
-                        <p>
-                            Look after your staff, they'll look after your customers! Learn about effective staff training programs, motivational strategies, and
-                            how to create a more positive work environment that ensures high productivity and job satisfaction.
-                        </p>
-                        <a href="https://www.theworkwall.com" target="_blank">
-                            <img src="assets/images/link.png" alt="Link Icon" class="link-icon">Staff Management Software
-                        </a>
-                    </div>
-                </article>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
-        </div>
-    </footer>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Hospitality Help for Owners</title>
+		<link rel="stylesheet" href="assets/css/style.css" />
+	</head>
+	<body>
+		<!-- Standard nav bar for all pages -->
+		<header>
+			<div class="navbar">
+				<h1>Hospitality Help Hub</h1>
+				<input type="checkbox" id="nav-toggle" class="nav-toggle" />
+				<label for="nav-toggle" class="nav-toggle-label">
+					<span></span>
+				</label>
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="owners.html">Owners</a></li>
+						<li><a href="managers.html">Managers</a></li>
+						<li><a href="staff.html">Staff</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<main>
+			<!-- Opening image and text for all pages -->
+			<section class="hero" style="background-image: url('assets/images/helpdesk.webp')">
+				<div class="container">
+					<h2>Welcome, Business Owners</h2>
+					<p>Here you can find resources and advice tailored to help you succeed & manage in the hospitality industry.</p>
+				</div>
+			</section>
+			<section class="content">
+				<div class="container">
+					<!-- Pages are divided into 2 or 3 "articles" with text (text-side) images with text on an overlay -->
+					<article class="article-left">
+						<div class="image-side">
+							<img src="assets/images/Strategy-Chess.png" alt="Business Strategy" />
+							<div class="overlay">
+								<p>"Plan strategically for success."</p>
+							</div>
+						</div>
+						<div class="text-side">
+							<h3>Strategic Planning and Adaptation</h3>
+							<p>
+								Although everyday is different, strategic planning and adaptation are crucial. Explore ways to align your business strategy with
+								market trends, innovate service offerings, and build on data to help predict future needs. Connect with industry experts for insights.
+							</p>
+							<a href="https://www.youtube.com/watch?v=qkU3uwWyAn8" target="_blank">
+								<img src="assets/images/link.png" alt="Link Icon" class="link-icon" />Strategic Resources
+							</a>
+						</div>
+					</article>
+					<article class="article-right">
+						<div class="image-side">
+							<img src="assets/images/Restaurant-Management-Skills.png" alt="Marketing Trends" />
+							<div class="overlay">
+								<p>"Grow your customer base through improved marketing."</p>
+							</div>
+						</div>
+						<div class="text-side">
+							<h3>Embracing New Marketing Trends</h3>
+							<p>
+								Understanding and implementing the latest marketing trends can help attract new customers. Dive into digital marketing techniques,
+								social media engagement strategies, and customer relationship management to enhance your brand's visibility and customer loyalty.
+							</p>
+							<a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank">
+								<img src="assets/images/link.png" alt="Link Icon" class="link-icon" />New Tech to Make Things Easier
+							</a>
+							<a href="https://coso.ai/" target="_blank">
+								<img src="assets/images/link.png" alt="Link Icon" class="link-icon" />Marketing AI Software
+							</a>
+						</div>
+					</article>
+					<article class="article-left">
+						<div class="image-side">
+							<img src="assets/images/staff-training.jpg" alt="Staff Management" />
+							<div class="overlay">
+								<p>"Develop a more skilled and motivated team."</p>
+							</div>
+						</div>
+						<div class="text-side">
+							<h3>Effective Staff Management</h3>
+							<p>
+								Look after your staff, they'll look after your customers! Learn about effective staff training programs, motivational strategies, and
+								how to create a more positive work environment that ensures high productivity and job satisfaction.
+							</p>
+							<a href="https://www.theworkwall.com" target="_blank">
+								<img src="assets/images/link.png" alt="Link Icon" class="link-icon" />Staff Management Software
+							</a>
+						</div>
+					</article>
+				</div>
+			</section>
+		</main>
+		<footer>
+			<div class="container">
+				<p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
+			</div>
+		</footer>
+	</body>
 </html>
