--- a/owners.html
+++ b/owners.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hospitality Help for Owners</title>
 		<link rel="stylesheet" href="assets/css/style.css" />
+		<link rel="error" type="text/html" href="404.html" />
 	</head>
 	<body>
 		<!-- Standard nav bar for all pages -->
