fix image names

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hospitality Help Hub</title>
 		<link rel="stylesheet" href="assets/css/style.css" />
-		<link rel="icon" type="image/png" href="assets/images/favicon_self/favicon-32x32.png" />
+		<link rel="icon" type="image/png" href="../assets/images/favicon_self/favicon-32x32.png" />
 		<link rel="error" type="text/html" href="404.html" />
 	</head>
 	<body>
