fix icon ref link

--- a/index.html
+++ b/index.html
@@ -110,9 +110,11 @@
 			<div class="container">
 				<p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
 			</div>
+			<div class="icon-ref">
+				<a href="https://www.flaticon.com/free-icons/link" target="_blank" title="link icons"
+					>Link icons created by Creaticca Creative Agency - Flaticon</a
+				>
+			</div>
 		</footer>
-		<div class="icon-ref">
-			<a href="https://www.flaticon.com/free-icons/link" title="link icons">Link icons created by Creaticca Creative Agency - Flaticon</a>
-		</div>
 	</body>
 </html>
