--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hospitality Help Hub</title>
-		<link rel="stylesheet" href="assets/css/style.css" />
-		<link rel="icon" type="image/png" href="../assets/images/favicon/favicon-32x32.png" />
+		<link rel="stylesheet" href="./assets/css/style.css" />
+		<link rel="icon" type="image/png" href="./assets/images/favicon/favicon-32x32.png" />
+		/>
 		<link rel="error" type="text/html" href="404.html" />
 	</head>
 	<body>
@@ -29,7 +30,7 @@
 		</header>
 		<main>
 			<!-- Opening image and text for all pages -->
-			<section class="hero" style="background-image: url('assets/images/helpdesk.webp')">
+			<section class="hero" style="background-image: url('./assets/images/helpdesk.webp')">
 				<div class="container">
 					<h2>Welcome to Your Resource Hub</h2>
 					<p>Supporting hospitality workers through challenging times.</p>
@@ -40,7 +41,7 @@
 					<!-- Pages are divided into 2 or 3 "articles" with text (text-side) images with text on an overlay -->
 					<article class="article-left">
 						<div class="image-side">
-							<img src="assets/images/challenge-food.jpeg" alt="Industry Challenges" />
+							<img src="./assets/images/challenge-food.jpeg" alt="Industry Challenges" />
 							<div class="overlay">
 								<p>"Hospitality is a very challenging industry at the moment, you're not alone."</p>
 							</div>
@@ -48,13 +49,13 @@
 						<div class="text-side">
 							<h3>Overcoming Industry Challenges</h3>
 							<p>We can help you cope in these tough times. Explore strategies for resilience and success.</p>
-							<a href="owners.html"><img src="assets/images/link.png" alt="link icon" class="link-icon" /> Advice for Owners</a>
-							<a href="managers.html"><img src="assets/images/link.png" alt="link icon" class="link-icon" /> Guidance for Managers</a>
+							<a href="owners.html"><img src="./assets/images/link.png" alt="link icon" class="link-icon" /> Advice for Owners</a>
+							<a href="managers.html"><img src="./assets/images/link.png" alt="link icon" class="link-icon" /> Guidance for Managers</a>
 						</div>
 					</article>
 					<article class="article-right">
 						<div class="image-side">
-							<img src="assets/images/resilince.jpeg" alt="Resilience Resources" />
+							<img src="./assets/images/resilince.jpeg" alt="Resilience Resources" />
 							<div class="overlay">
 								<p>"If you're feeling the strain of hospitality, we can help you find support."</p>
 							</div>
@@ -62,12 +63,12 @@
 						<div class="text-side">
 							<h3>Getting Through The Strain</h3>
 							<p>Empower yourself with resources for personal and professional development.</p>
-							<a href="staff.html"><img src="assets/images/link.png" alt="link icon" class="link-icon" />Support for Staff</a>
+							<a href="staff.html"><img src="./assets/images/link.png" alt="link icon" class="link-icon" />Support for Staff</a>
 						</div>
 					</article>
 					<article class="article-left">
 						<div class="image-side">
-							<img src="assets/images/team-strenght.jpeg" alt="Community Support" />
+							<img src="./assets/images/team-strenght.jpeg" alt="Community Support" />
 							<div class="overlay">
 								<p>"You're not alone, connect with peers having similar issues."</p>
 							</div>
@@ -76,7 +77,7 @@
 							<h3>Community Support</h3>
 							<p>Engage with your peers and help build a supportive network.</p>
 							<label for="communityPopupCheckbox" class="popup-button">
-								<img src="assets/images/link.png" alt="Link Icon" class="link-icon" />Join Our Community</label
+								<img src="./assets/images/link.png" alt="Link Icon" class="link-icon" />Join Our Community</label
 							>
 						</div>
 					</article>
@@ -92,11 +93,11 @@
 				<p>Connect with us on different platforms:</p>
 
 				<div>
-					<img class="media-icon" src="assets/images/whatsapp-icon.png" alt="WhatsApp" />
+					<img class="media-icon" src="./assets/images/whatsapp-icon.png" alt="WhatsApp" />
 					<a class="media-link" href="https://whatsapp.com" target="_blank">Join WhatsApp Group</a>
 				</div>
 				<div>
-					<img class="media-icon" src="assets/images/facebook-icon.png" alt="Facebook" />
+					<img class="media-icon" src="./assets/images/facebook-icon.png" alt="Facebook" />
 					<a class="media-link" href="https://facebook.com" target="_blank">Join Facebook Group</a>
 				</div>
 				<h3 class="subscribe-head">Subscribe to our Newsletter</h3>
